# iden_controller

./: .gitignore  CMakeLists.txt  FACTORY_ROOM_DELIVERY_GUIDE.md  INTEGRATION_GUIDE.md  README_iden.md  iden_planner_plugin.xml  iden_planner_v2_plugin.xml  package.xml  theta_star_plugin.xml
audit_reports/: global_first_graph_vision_design_20260706.md  global_first_planner_design_20260706.md  navfn_success1_audit_20260705.md
autonomous-car-project/: .gitignore  LICENSE  README.md
config/: driver_params_mini.yaml  driver_params_ucarV2.yaml  driver_params_xiao.yaml  factory_room_center_only_full_v1.yaml  factory_room_center_only_full_v2.yaml  factory_room_costmap_common.yaml  factory_room_delivery_robust_v2.yaml  factory_room_dwa.yaml  factory_room_front_first_stable_rect_v1.yaml  factory_room_front_first_stable_rect_v2.yaml  factory_room_global_costmap.yaml  factory_room_local_costmap.yaml  factory_room_map_coverage_v5.yaml  factory_room_mission.yaml  factory_room_mission_parking_v2.yaml  factory_room_mission_parking_v3.yaml  factory_room_mission_parking_v4.yaml  factory_room_mission_parking_v5.yaml  factory_room_mission_parking_v7.yaml  factory_room_move_base_params.yaml  factory_room_move_base_params_navfn_d1.yaml  factory_room_nearby_view_cone_merge_v4.yaml  factory_room_recovery_fast_parking_v3.yaml  factory_sign_center_only_parking_test_v1.yaml  factory_sign_center_only_parking_test_v2.yaml  factory_sign_center_parking_test_v1.yaml  factory_sign_center_parking_test_v2.yaml  factory_sign_center_parking_test_v3.yaml  factory_sign_center_parking_test_v4.yaml  fixed_point_continuous_ocr_sweep_route_test_v1.yaml  fixed_point_continuous_ocr_sweep_route_test_v2.yaml  front_first_room_rect_sweep_route_test_v1.yaml  front_first_smooth_navigation_v1.yaml  front_first_stable_dynamic_route_lateral_v2.yaml  front_first_stable_dynamic_route_test_v1.yaml  front_first_two_stage_route_test_v1.yaml  global_first_graph_nav.yaml  global_first_graph_nav_2249fcf.yaml  global_first_nav.yaml  global_first_safety_parking_v8.yaml  (+19 more)
factory_ocr_car_deploy/: camera_det_rec.py  ch_ppocrv3_det_final_480x640_nhwc.rknn  collect_full_images.py  dict.txt  test_load_rec_rknn.py
iden_trash/: iden_thing.md
launch/: all_national.launch  all_process_iden.launch  all_province.launch  base_driver_iden.launch  cruise_cone_v1.launch  cruise_cone_v2.launch  cruise_navfn.launch  cruise_navfn_exp3.launch  cruise_navfn_safe_fast.launch  cruise_navfn_success1.launch  cruise_navfn_success1_guarded.launch  cruise_navfn_success2.launch  cruise_navfn_v2_wide.launch  cruise_pid.launch  cruise_voice.launch  factory_ocr_from_package.launch  factory_room_delivery_runtime_center_only_front_first_rect_v1.launch  factory_room_delivery_runtime_center_only_front_first_rect_v2.launch  factory_room_delivery_runtime_center_only_front_first_rect_v3.launch  factory_room_delivery_runtime_center_only_front_first_rect_v4.launch  factory_room_delivery_runtime_center_only_v1.launch  factory_room_delivery_runtime_center_only_v2.launch  factory_room_delivery_runtime_center_only_v3.launch  factory_room_delivery_runtime_center_only_v4.launch  factory_room_delivery_runtime_center_only_v5.launch  (+92 more)
(+375 files in other folders)
